k8s/php-nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-nginx-deployment
  labels:
    app.kubernetes.io/name: php-nginx
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: php-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: php-nginx
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: php-blog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: php-nginx
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: php-blog
    spec:
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
      containers:
        - name: php-fpm
          image: dymafr/projet4-php-fpm
          ports:
            - containerPort: 9000
        - name: nginx
          image: dymafr/projet4-nginx
          ports:
            - containerPort: 80
          volumeMounts:
          - name: nginx-config-volume
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: nginx.conf
      imagePullSecrets:
        - name: docker-hub-secret
